Whitespace fix and CSS adds.

--- a/students/nicholasweber/tabsAssignment/css/main.css
+++ b/students/nicholasweber/tabsAssignment/css/main.css
@@ -10,10 +10,21 @@
 	display: none;
 }
 
+nav {
+
+}
+
+body > div {
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
 	padding:0;
+  float: left;
 
 }
 
@@ -22,13 +33,15 @@ li {
 }
 
 a {
-		display: block;
-		width: 70px;
-		text-decoration: none;
-		border-top-left-radius: 3px;
-		border-top-right-radius: 3px;
+	text-align: center;
+	display: block;
+	width: 80px;
+	text-decoration: none;
+	background-color: orange;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 section {
-  float: left;
+  
 }
